// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiPinnableListGroup can have custom pin icon titles 1`] = `
<ul
  aria-label="aria-label"
  class="euiListGroup euiPinnableListGroup testClass1 testClass2 emotion-euiListGroup-s-maxWidthDefault"
  data-test-subj="test subject string"
>
  <li
    class="euiListGroupItem euiPinnableListGroup__item emotion-euiListGroupItem-m-text"
  >
    <span
      class="euiListGroupItem__text emotion-euiListGroupItem__text"
    >
      <span
        class="euiListGroupItem__icon emotion-euiListGroupItem__icon"
        color="inherit"
        data-euiicon-type="stop"
      />
      <span
        class="euiListGroupItem__label emotion-euiListGroupItem__label"
        title="Label with iconType"
      >
        Label with iconType
      </span>
    </span>
    <button
      aria-label="Pin Label with iconType to the top"
      class="euiButtonIcon euiButtonIcon--xSmall euiListGroupItemExtraAction css-csq39y-empty-primary-hoverStyles-EuiButtonIcon-euiListGroupItemExtraAction-euiPinnableListGroup__itemExtraAction"
      title="Pin Label with iconType to the top"
      type="button"
    >
      <span
        aria-hidden="true"
        class="euiButtonIcon__icon"
        color="inherit"
        data-euiicon-type="pinFilled"
      />
    </button>
  </li>
  <li
    class="euiListGroupItem euiPinnableListGroup__item emotion-euiListGroupItem-m-text"
  >
    <span
      class="euiListGroupItem__text emotion-euiListGroupItem__text"
    >
      <span
        class="euiListGroupItem__label emotion-euiListGroupItem__label"
        title="Custom extra action"
      >
        Custom extra action
      </span>
    </span>
    <button
      aria-label="bell"
      class="euiButtonIcon euiButtonIcon--xSmall euiListGroupItemExtraAction css-7gi2it-empty-primary-hoverStyles-EuiButtonIcon-euiListGroupItemExtraAction"
      type="button"
    >
      <span
        aria-hidden="true"
        class="euiButtonIcon__icon"
        color="inherit"
        data-euiicon-type="bell"
      />
    </button>
  </li>
  <li
    class="euiListGroupItem euiPinnableListGroup__item emotion-euiListGroupItem-m-text-isActive-isClickable"
  >
    <a
      class="euiListGroupItem__button emotion-euiListGroupItem__button-text"
      href="#"
      rel="noreferrer"
    >
      <span
        class="euiListGroupItem__label emotion-euiListGroupItem__label"
        title="Active link"
      >
        Active link
      </span>
    </a>
    <button
      aria-label="Pin Active link to the top"
      class="euiButtonIcon euiButtonIcon--xSmall euiListGroupItemExtraAction css-csq39y-empty-primary-hoverStyles-EuiButtonIcon-euiListGroupItemExtraAction-euiPinnableListGroup__itemExtraAction"
      title="Pin Active link to the top"
      type="button"
    >
      <span
        aria-hidden="true"
        class="euiButtonIcon__icon"
        color="inherit"
        data-euiicon-type="pinFilled"
      />
    </button>
  </li>
  <li
    class="euiListGroupItem euiPinnableListGroup__item emotion-euiListGroupItem-m-text-isClickable"
  >
    <button
      class="emotion-euiListGroupItem__button-text"
      type="button"
    >
      <span
        class="euiListGroupItem__label emotion-euiListGroupItem__label"
        title="Button with onClick"
      >
        Button with onClick
      </span>
    </button>
    <button
      aria-label="Unpin Button with onClick to the top"
      class="euiButtonIcon euiButtonIcon--xSmall euiListGroupItemExtraAction css-1f6nepc-empty-primary-hoverStyles-EuiButtonIcon-euiListGroupItemExtraAction-euiPinnableListGroup__itemExtraAction-pinned"
      title="Unpin Button with onClick to the top"
      type="button"
    >
      <span
        aria-hidden="true"
        class="euiButtonIcon__icon"
        color="inherit"
        data-euiicon-type="pinFilled"
      />
    </button>
  </li>
  <li
    class="euiListGroupItem euiPinnableListGroup__item emotion-euiListGroupItem-m-text-isClickable"
  >
    <a
      class="euiListGroupItem__button emotion-euiListGroupItem__button-text"
      href="#"
      rel="noreferrer"
    >
      <span
        class="euiListGroupItem__label emotion-euiListGroupItem__label"
        title="Link with href"
      >
        Link with href
      </span>
    </a>
    <button
      aria-label="Pin Link with href to the top"
      class="euiButtonIcon euiButtonIcon--xSmall euiListGroupItemExtraAction css-csq39y-empty-primary-hoverStyles-EuiButtonIcon-euiListGroupItemExtraAction-euiPinnableListGroup__itemExtraAction"
      title="Pin Link with href to the top"
      type="button"
    >
      <span
        aria-hidden="true"
        class="euiButtonIcon__icon"
        color="inherit"
        data-euiicon-type="pinFilled"
      />
    </button>
  </li>
  <li
    class="euiListGroupItem euiPinnableListGroup__item emotion-euiListGroupItem-m-text-isClickable"
  >
    <a
      class="euiListGroupItem__button emotion-euiListGroupItem__button-text"
      href="#"
      rel="noreferrer"
    >
      <span
        class="euiListGroupItem__label emotion-euiListGroupItem__label"
        title="Not pinnable"
      >
        Not pinnable
      </span>
    </a>
  </li>
</ul>
`;

exports[`EuiPinnableListGroup is rendered 1`] = `
<ul
  aria-label="aria-label"
  class="euiListGroup euiPinnableListGroup testClass1 testClass2 emotion-euiListGroup-s-maxWidthDefault"
  data-test-subj="test subject string"
>
  <li
    class="euiListGroupItem euiPinnableListGroup__item emotion-euiListGroupItem-m-text"
  >
    <span
      class="euiListGroupItem__text emotion-euiListGroupItem__text"
    >
      <span
        class="euiListGroupItem__icon emotion-euiListGroupItem__icon"
        color="inherit"
        data-euiicon-type="stop"
      />
      <span
        class="euiListGroupItem__label emotion-euiListGroupItem__label"
        title="Label with iconType"
      >
        Label with iconType
      </span>
    </span>
    <button
      aria-label="Pin item"
      class="euiButtonIcon euiButtonIcon--xSmall euiListGroupItemExtraAction css-csq39y-empty-primary-hoverStyles-EuiButtonIcon-euiListGroupItemExtraAction-euiPinnableListGroup__itemExtraAction"
      title="Pin item"
      type="button"
    >
      <span
        aria-hidden="true"
        class="euiButtonIcon__icon"
        color="inherit"
        data-euiicon-type="pinFilled"
      />
    </button>
  </li>
  <li
    class="euiListGroupItem euiPinnableListGroup__item emotion-euiListGroupItem-m-text"
  >
    <span
      class="euiListGroupItem__text emotion-euiListGroupItem__text"
    >
      <span
        class="euiListGroupItem__label emotion-euiListGroupItem__label"
        title="Custom extra action"
      >
        Custom extra action
      </span>
    </span>
    <button
      aria-label="bell"
      class="euiButtonIcon euiButtonIcon--xSmall euiListGroupItemExtraAction css-7gi2it-empty-primary-hoverStyles-EuiButtonIcon-euiListGroupItemExtraAction"
      type="button"
    >
      <span
        aria-hidden="true"
        class="euiButtonIcon__icon"
        color="inherit"
        data-euiicon-type="bell"
      />
    </button>
  </li>
  <li
    class="euiListGroupItem euiPinnableListGroup__item emotion-euiListGroupItem-m-text-isActive-isClickable"
  >
    <a
      class="euiListGroupItem__button emotion-euiListGroupItem__button-text"
      href="#"
      rel="noreferrer"
    >
      <span
        class="euiListGroupItem__label emotion-euiListGroupItem__label"
        title="Active link"
      >
        Active link
      </span>
    </a>
    <button
      aria-label="Pin item"
      class="euiButtonIcon euiButtonIcon--xSmall euiListGroupItemExtraAction css-csq39y-empty-primary-hoverStyles-EuiButtonIcon-euiListGroupItemExtraAction-euiPinnableListGroup__itemExtraAction"
      title="Pin item"
      type="button"
    >
      <span
        aria-hidden="true"
        class="euiButtonIcon__icon"
        color="inherit"
        data-euiicon-type="pinFilled"
      />
    </button>
  </li>
  <li
    class="euiListGroupItem euiPinnableListGroup__item emotion-euiListGroupItem-m-text-isClickable"
  >
    <button
      class="emotion-euiListGroupItem__button-text"
      type="button"
    >
      <span
        class="euiListGroupItem__label emotion-euiListGroupItem__label"
        title="Button with onClick"
      >
        Button with onClick
      </span>
    </button>
    <button
      aria-label="Unpin item"
      class="euiButtonIcon euiButtonIcon--xSmall euiListGroupItemExtraAction css-1f6nepc-empty-primary-hoverStyles-EuiButtonIcon-euiListGroupItemExtraAction-euiPinnableListGroup__itemExtraAction-pinned"
      title="Unpin item"
      type="button"
    >
      <span
        aria-hidden="true"
        class="euiButtonIcon__icon"
        color="inherit"
        data-euiicon-type="pinFilled"
      />
    </button>
  </li>
  <li
    class="euiListGroupItem euiPinnableListGroup__item emotion-euiListGroupItem-m-text-isClickable"
  >
    <a
      class="euiListGroupItem__button emotion-euiListGroupItem__button-text"
      href="#"
      rel="noreferrer"
    >
      <span
        class="euiListGroupItem__label emotion-euiListGroupItem__label"
        title="Link with href"
      >
        Link with href
      </span>
    </a>
    <button
      aria-label="Pin item"
      class="euiButtonIcon euiButtonIcon--xSmall euiListGroupItemExtraAction css-csq39y-empty-primary-hoverStyles-EuiButtonIcon-euiListGroupItemExtraAction-euiPinnableListGroup__itemExtraAction"
      title="Pin item"
      type="button"
    >
      <span
        aria-hidden="true"
        class="euiButtonIcon__icon"
        color="inherit"
        data-euiicon-type="pinFilled"
      />
    </button>
  </li>
  <li
    class="euiListGroupItem euiPinnableListGroup__item emotion-euiListGroupItem-m-text-isClickable"
  >
    <a
      class="euiListGroupItem__button emotion-euiListGroupItem__button-text"
      href="#"
      rel="noreferrer"
    >
      <span
        class="euiListGroupItem__label emotion-euiListGroupItem__label"
        title="Not pinnable"
      >
        Not pinnable
      </span>
    </a>
  </li>
</ul>
`;
